Añadidas recompensas recientes en el menu y ajustes visuales

--- a/src/app/core/tareas/component/historial/historial-dialog.component.html
+++ b/src/app/core/tareas/component/historial/historial-dialog.component.html
@@ -1,8 +1,11 @@
 <div class="dialog-container">
+  <button type="button" class="close-fab" mat-icon-button aria-label="Cerrar" (click)="cerrar()">
+    <mat-icon fontIcon="close"></mat-icon>
+  </button>
+
   <h1 class="titulo-modal">
     <span class="icon-pill"><mat-icon fontIcon="history"></mat-icon></span>
     Última asignación
-
   </h1>
 
   <div class="dialog-body">
